Use Base58 util; add universal resolver & tests
Replace ad-hoc Base58 encoding in DIDWebProvider with a shared Base58 utility class and remove duplicate implementation. Introduce a DIF Universal Resolver fallback to DIDResolverServiceImpl (UNIVERSAL_RESOLVER_URL, resolveViaUniversalResolver) and change unsupported-method behavior to attempt universal resolution; also simplify isSupported logic and construct URL via URI.create(...).toURL(). Add Base58 utility class and extensive unit tests covering DID resolution, provider behavior, DID document model, provider factory, document service, Base58, and resolver public-key parsing (RSA/EC/Ed25519). Minor Javadoc cleanup in BCEd25519Signer. These changes centralize Base58 logic, broaden DID method support via the universal resolver, and improve test coverage.